"Fix Vercel routing paths"

--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,16 @@
             "dest": "/api/index.py"
         },
         {
-            "handle": "filesystem"
+            "src": "/assets/(.*)",
+            "dest": "/frontend/assets/$1"
+        },
+        {
+            "src": "/(.*)\\.(png|svg|ico|jpg|jpeg|css|js)",
+            "dest": "/frontend/$1"
         },
         {
             "src": "/(.*)",
-            "dest": "/index.html"
+            "dest": "/frontend/index.html"
         }
     ]
 }
